# integral-monte-carlo

./: README.md  pyproject.toml
integral_monte_carlo/: integral.py
tests/: test_integral.py
