[tool.poetry]
name = "integral-monte-carlo"
version = "0.1.0"
description = ""
authors = ["easai <aksarih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.3"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
